# api/routers/organization.js
@@ -3,14 +3,13 @@ const OrganizationController = require('../controllers/organization');
 const sessionAuth = require('../policies/sessionAuth');
 const csrfProtection = require('../policies/csrfProtection');
 
-// enable csrf protection for all site routes
-// note that this must come before the route definitions
+router.use(sessionAuth);
 router.use(csrfProtection);
 
-router.get('/organization', sessionAuth, OrganizationController.findAllForUser);
-router.get('/organization/:id', sessionAuth, OrganizationController.findOneForUser);
-router.put('/organization/:id', sessionAuth, OrganizationController.update);
-router.post('/organization/:id/invite', sessionAuth, OrganizationController.invite);
-router.get('/organization/:id/members', sessionAuth, OrganizationController.members);
+router.get('/organization', OrganizationController.findAllForUser);
+router.get('/organization/:id', OrganizationController.findOneForUser);
+router.put('/organization/:id', OrganizationController.update);
+router.post('/organization/:id/invite', OrganizationController.invite);
+router.get('/organization/:id/members', OrganizationController.members);
 
 module.exports = router;
